--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ramirez Landscaping</title>
-    <link href="CSS/styles.css" rel="stylesheet">
+    <link href="css/styles.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Libre+Caslon+Display&family=Lobster&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Libre+Caslon+Display&family=Libre+Franklin:ital,wght@1,200&family=Lobster&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="heading">
@@ -24,13 +24,15 @@
         <section id="section1" class="section1">
            <div>
                 <div>
-                    <h2 class="section1">Elevate Your</h2>
-                    <h2 class="section1">Outdoor Oasis</h2>
-                    <h2 class="section1">Oasis</h2>
+                    <h2 class="step1">Elevate</h2>
+                    <h2 class="step2">Your</h2>
+                    <h2 class="step3">Landscape</h2>
+                    
                 </div>
-                <div>
+                <div class="rightAlign">
                     <p>Transforming Your Outdoor Space with Expertise and Elegance</p>
                 </div>
+                <a href="https://www.w3schools.com/html/html5_semantic_elements.asp" target="_blank"><button class="btn quote" type="button"><b>Get a Quote</b></button></a>
            </div>
         </section>
         <section>
