Removes comment from html tag

--- a/index.html
+++ b/index.html
@@ -98,9 +98,4 @@
     </main>
     <footer>Darius Williams</footer>
 </body>
-<!-- </html><div>
-                <figure>
-                    <img src="#">
-                </figure>
-                <p></p>
-            </div> -->
+</html>
