--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 <body>
     <header>
         <nav>
-            <h2>Ramirez Landscaping</h2>
+            <!-- <h2>Ramirez Landscaping</h2> -->
+            <img src="Images/TypeLogoShadow.png" alt="Ramirez Landscaping logo" width="205" height="34">
             <button class="btn-qt">Call for a Quote</button>
             <a href="#"><p>Haga clic aquí para español</p></a>
         </nav>
@@ -25,7 +26,7 @@
             </h1>
             <p>Transforming Your Outdoor Space with Expertise and Experience</p>
             <button class="btn-qt">Call for a Quote</button>
-            <figure><img src="Images/bestCoverPS.png" alt="garden with mulch"></figure>
+            <figure><img src="Images/bestCoverPS.png" alt="garden with mulch" width="353" height="471"></figure>
         </section>
         <section id="section2">
             <div class="sectionTitle">
@@ -35,25 +36,25 @@
             <div class="content">
                 <div id="section2-1">
                     <figure>
-                        <img src="Images/twoTalkingOrange.png" alt="two people talking while sitting on chairs">
+                        <img src="Images/twoTalkingOrange.png" alt="two people talking while sitting on chairs" width="170.4" height="119">
                     </figure>
                     <p>As a small local business, you can be sure you will get the attention you deserve</p>
                 </div>
                 <div id="section2-2">
                     <figure>
-                        <img src="Images/wheelBarroworange.png" alt="emptying a wheelbarrow">
+                        <img src="Images/wheelBarroworange.png" alt="emptying a wheelbarrow" width="50" height="49">
                     </figure>
                     <figure>
-                        <img src="Images/hedgeTrimmer.png" alt="man using a hedgetrimmer">
+                        <img src="Images/hedgeTrimmer.png" alt="man using a hedgetrimmer" width="50" height="42.3">
                     </figure>
                     <figure>
-                        <img src="Images/plantingTreeorange.png" alt="man planting a tree">
+                        <img src="Images/plantingTreeorange.png" alt="man planting a tree" width="57.1" height="41.5">
                     </figure>
                     <p>Get personalized and tailored services based on your needs</p>
                 </div>
                 <div>
                     <figure>
-                        <img src="Images/talkingPhoneOrange.png">
+                        <img src="Images/talkingPhoneOrange.png" width="137.3" height="118">
                     </figure>
                     <p>As the owner, I am only a phone call away</p>
                 </div>
@@ -68,17 +69,17 @@
             </div>
                 <div>
                     <figure>
-                        <img src="Images/rakingLeavesOrange.png">
+                        <img src="Images/rakingLeavesOrange.png" width="90" height="107">
                     </figure>
                     <p>Keeping your landscape clean and maintained, whether commercial or residential</p>
                 </div>
                 <figure>
-                    <img src="Images/layingSodOrange.png">
+                    <img src="Images/layingSodOrange.png" width="126" height="82">
                 </figure>
                 <p>Laying sod, mowing, and lawn maintenance</p>
             </div>
             <figure>
-                <img src="Images/hardscapingOrange.png">
+                <img src="Images/hardscapingOrange.png" width="136" height="85">
             </figure>
             <p>Roof and gutter cleaning, hardscaping, and more!</p>
         </div>
@@ -87,7 +88,7 @@
             <div class="sectionTitle">
                 <h2>Portfolio</h2>
                     <hr>
-                    <p>Our services include:</p>
+                    <p>Sample of my work:</p>
             </div>
                 <div>
                     <div>
@@ -95,7 +96,7 @@
                         <button id="after-btn" class="portActive">After</button>
                     </div>
                     <figure>
-                        <img src="Images/afterHardscaped.png">
+                        <img src="Images/afterHardscaped.png" width="253.63" height="338.17">
                     </figure>
                 </div>
         </section>
