--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
 <body>
     <header>
         <nav>
-            <!-- <h2>Ramirez Landscaping</h2> -->
-            <img src="Images/TypeLogoShadow.png" alt="Ramirez Landscaping logo" width="205" height="34">
-            <button class="btn-qt">Call for a Quote</button>
+                <img src="Images/TypeLogoShadow.png" alt="Ramirez Landscaping logo" width="205" height="34" class="logoImg"><button class="btn-qt qt1">Call for a Quote</button>
             <a href="#"><p>Haga clic aquí para español</p></a>
         </nav>
     </header>
@@ -95,7 +93,7 @@
                         <button id="before-btn" class="portNotActive">Before</button>
                         <button id="after-btn" class="portActive">After</button>
                     </div>
-                    <figure>
+                    <figure class="portfolioCar">
                         <img src="Images/afterHardscaped.png" width="253.63" height="338.17">
                     </figure>
                 </div>
