Overhaul restart styling

--- a/index0.html
+++ b/index0.html
@@ -8,35 +8,39 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Nunito&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
 <link href="#" rel="stylesheet">
-<!-- <link href="CSS/header/header.css" rel="stylesheet">
+<link href="CSS/header/header.css" rel="stylesheet">
 <link href="CSS/section/section.css" rel="stylesheet">
-<link href="CSS/footer/footer.css" rel="stylesheet"> -->
-<link href="CSS/style2.css" rel="stylesheet">
+<link href="CSS/footer/footer.css" rel="stylesheet">
 </head>
 <body>
     <header>
         <nav>
-            <ul>
-                <li><img src="Images/TypeLogoShadow.png" alt="Ramirez Landscaping logo" width="205" height="34" class="logoImg"></li>
-                <li><button class="btn-qt qt1">Call for a Quote</button></li>
-                <li><a href="#">Haga clic aquí para español</a></li>
-            </ul>
+                <img src="Images/TypeLogoShadow.png" alt="Ramirez Landscaping logo" width="205" height="34" class="logoImg"><button class="btn-qt qt1">Call for a Quote</button>
+            <a href="#"><p>Haga clic aquí para español</p></a>
         </nav>
     </header>
     <main>
         <section id="section1">
-            <h1>Elevate Your Landscape</h1>
+            <h1>
+                Elevate Your Landscape
+            </h1>
             <p>Transforming Your Outdoor Space with Expertise and Experience</p>
             <button class="btn-qt">Call for a Quote</button>
             <figure><img src="Images/bestCoverPS.png" alt="garden with mulch" width="353" height="471"></figure>
         </section>
         <hr>
         <section id="section2">
+            <div class="sectionTitle">
                 <h2>Why Choose Us</h2>
+            </div>
+            <div class="content">
+                <div id="section2-1">
                     <figure>
                         <img src="Images/twoTalkingOrange.png" alt="two people talking while sitting on chairs" width="170.4" height="119">
                     </figure>
                     <p>As a small local business, you can be sure you will get the attention you deserve</p>
+                </div>
+                <div id="section2-2">
                     <figure>
                         <img src="Images/wheelBarroworange.png" alt="emptying a wheelbarrow" width="50" height="49">
                     </figure>
@@ -47,10 +51,14 @@
                         <img src="Images/plantingTreeorange.png" alt="man planting a tree" width="57.1" height="41.5">
                     </figure>
                     <p>Get personalized and tailored services based on your needs</p>
+                </div>
+                <div>
                     <figure>
                         <img src="Images/talkingPhoneOrange.png" width="137.3" height="118">
                     </figure>
                     <p>As the owner, I am only a phone call away</p>
+                </div>
+            </div>
         </section>
         <hr>
         <section id="section3">
