--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </nav>
     </header>
     <main>
-        <section id="section1">
+        <section id="section1" class="section1">
             <h1>Elevate Your Landscape</h1>
             <p>Transforming Your Outdoor Space with Expertise and Experience</p>
             <button class="btn-qt">Call for a Quote</button>
@@ -37,15 +37,11 @@
                         <img src="Images/twoTalkingOrange.png" alt="two people talking while sitting on chairs" width="170.4" height="119">
                     </figure>
                     <p>As a small local business, you can be sure you will get the attention you deserve</p>
-                    <figure>
-                        <img src="Images/wheelBarroworange.png" alt="emptying a wheelbarrow" width="50" height="49">
-                    </figure>
-                    <figure>
-                        <img src="Images/hedgeTrimmer.png" alt="man using a hedgetrimmer" width="50" height="42.3">
-                    </figure>
-                    <figure>
-                        <img src="Images/plantingTreeorange.png" alt="man planting a tree" width="57.1" height="41.5">
-                    </figure>
+                        <figure>
+                            <img src="Images/wheelBarroworange.png" alt="emptying a wheelbarrow" width="50" height="49">
+                            <img src="Images/hedgeTrimmer.png" alt="man using a hedgetrimmer" width="50" height="42.3">
+                            <img src="Images/plantingTreeorange.png" alt="man planting a tree" width="57.1" height="41.5">
+                        </figure>
                     <p>Get personalized and tailored services based on your needs</p>
                     <figure>
                         <img src="Images/talkingPhoneOrange.png" width="137.3" height="118">
