--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <!-- <link href="CSS/header/header.css" rel="stylesheet">
 <link href="CSS/section/section.css" rel="stylesheet">
 <link href="CSS/footer/footer.css" rel="stylesheet"> -->
-<link href="CSS/style2.css" rel="stylesheet">
+<link href="CSS/style3.css" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -25,10 +25,12 @@
     </header>
     <main>
         <section id="section1" class="section1">
-            <h1>Elevate Your Landscape</h1>
-            <p>Transforming Your Outdoor Space with Expertise and Experience</p>
-            <button class="btn-qt">Call for a Quote</button>
-            <figure><img src="Images/bestCoverPS.png" alt="garden with mulch" width="353" height="471"></figure>
+            <div class="elevate">
+                <h1>Elevate Your Landscape</h1>
+                <p>Transforming Your Outdoor Space with Expertise and Experience</p>
+                <button class="btn-qt">Call for a Quote</button>
+            </div>
+            <figure><img src="Images/bestCoverPS.png" alt="garden with mulch" width="706" height="942"></figure>
         </section>
         <hr>
         <section id="section2">
