--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 <body>
     <header>
         <nav>
+            <img src="Images/TypeLogoShadow.png" alt="Ramirez Landscaping logo" width="205" height="34" class="logoImg">
             <ul>
-                <li><img src="Images/TypeLogoShadow.png" alt="Ramirez Landscaping logo" width="205" height="34" class="logoImg"></li>
                 <li><button class="btn-qt qt1">Call for a Quote</button></li>
                 <li><a href="#">Haga clic aquí para español</a></li>
             </ul>
