--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <img src="Images/TypeLogoShadow.png" alt="Ramirez Landscaping logo" width="205" height="34" class="logoImg">
             <ul>
                 <li><button class="btn-qt qt1">Call for a Quote</button></li>
-                <li class="spanish"><a href="#">Haga clic aquí para español</a></li>
+                <li ><a href="#" class="spanish">Haga clic aquí para español</a></li>
             </ul>
         </nav>
     </header>
@@ -30,7 +30,7 @@
                 <p>Transforming Your Outdoor Space with Expertise and Experience</p>
                 <button class="btn-qt">Call for a Quote</button>
             </div>
-            <figure><img src="Images/bestCoverPS.png" alt="garden with mulch" width="706" height="942"></figure>
+            <figure><img src="Images/bestCoverPS.png" alt="garden with mulch" width="353" height="471"></figure>
         </section>
         <hr>
         <section id="section2">
