div and class to center content

--- a/index.html
+++ b/index.html
@@ -34,17 +34,21 @@
         </section>
         <hr>
         <section id="section2">
-                <h2>Why Choose Us</h2>
-                    <figure>
-                        <img src="Images/twoTalkingOrange.png" alt="two people talking while sitting on chairs" width="170.4" height="119">
-                    </figure>
-                    <p>As a small local business, you can be sure you will get the attention you deserve</p>
+                <h2 class="sectionTitle">Why Choose Us</h2>
+                    <div class="sectionTitle">
                         <figure>
-                            <img src="Images/wheelBarroworange.png" alt="emptying a wheelbarrow" width="50" height="49">
-                            <img src="Images/hedgeTrimmer.png" alt="man using a hedgetrimmer" width="50" height="42.3">
-                            <img src="Images/plantingTreeorange.png" alt="man planting a tree" width="57.1" height="41.5">
+                            <img src="Images/twoTalkingOrange.png" alt="two people talking while sitting on chairs" width="170.4" height="119">
                         </figure>
-                    <p>Get personalized and tailored services based on your needs</p>
+                        <p>As a small local business, you can be sure you will get the attention you deserve</p>
+                    </div>
+                        <div class="sectionTitle">
+                            <figure>
+                                <img src="Images/wheelBarroworange.png" alt="emptying a wheelbarrow" width="50" height="49">
+                                <img src="Images/hedgeTrimmer.png" alt="man using a hedgetrimmer" width="50" height="42.3">
+                                <img src="Images/plantingTreeorange.png" alt="man planting a tree" width="57.1" height="41.5">
+                            </figure>
+                        <p>Get personalized and tailored services based on your needs</p>
+                        </div>
                     <figure>
                         <img src="Images/talkingPhoneOrange.png" width="137.3" height="118">
                     </figure>
