--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
         </section>
         <hr>
         <section id="section2">
-                <h2 class="sectionTitle">Why Choose Us</h2>
-                    <div class="sectionTitle">
+                <h2 class="center">Why Choose Us</h2>
+                    <div class="center">
                         <figure>
                             <img src="Images/twoTalkingOrange.png" alt="two people talking while sitting on chairs" width="170.4" height="119">
                         </figure>
                         <p>As a small local business, you can be sure you will get the attention you deserve</p>
                     </div>
-                        <div class="sectionTitle">
+                        <div class="center">
                             <figure>
                                 <img src="Images/wheelBarroworange.png" alt="emptying a wheelbarrow" width="50" height="49">
                                 <img src="Images/hedgeTrimmer.png" alt="man using a hedgetrimmer" width="50" height="42.3">
@@ -49,48 +49,62 @@
                             </figure>
                         <p>Get personalized and tailored services based on your needs</p>
                         </div>
-                    <figure>
-                        <img src="Images/talkingPhoneOrange.png" width="137.3" height="118">
-                    </figure>
-                    <p>As the owner, I am only a phone call away</p>
+                    <div class="center">
+                        <figure>
+                            <img src="Images/talkingPhoneOrange.png" width="137.3" height="118">
+                        </figure>
+                        <p>As the owner, I am only a phone call away</p>
+                    </div>
         </section>
         <hr>
         <section id="section3">
-            <div class="sectionTitle">
+            <div class="center">
                 <h2>Services</h2>
                     <p>Our services include:</p>
             </div>
-                <div>
-                    <figure>
-                        <img src="Images/rakingLeavesOrange.png" width="90" height="107">
-                    </figure>
+            <div class="center">
+                    <div class="imageRight">
+                        <figure>
+                            <img src="Images/rakingLeavesOrange.png" width="90" height="107">
+                        </figure>
+                    </div>
                     <p>Keeping your landscape clean and maintained, whether commercial or residential</p>
+            </div>
+            <div class="center">
+                <div class="imageLeft">
+                    <figure>
+                        <img src="Images/layingSodOrange.png" width="126" height="82">
+                    </figure>
                 </div>
-                <figure>
-                    <img src="Images/layingSodOrange.png" width="126" height="82">
-                </figure>
                 <p>Laying sod, mowing, and lawn maintenance</p>
             </div>
+            <div class="center">
             <figure>
                 <img src="Images/hardscapingOrange.png" width="136" height="85">
             </figure>
             <p>Roof and gutter cleaning, hardscaping, and more!</p>
-        </div>
+            </div>
         </section>
         <hr>
         <section id="section4">
-            <div class="sectionTitle">
+            <div class="center">
                 <h2>Portfolio</h2>
                     <p>Sample of my work:</p>
             </div>
                 <div>
-                    <div>
+                    <div class="center buttonMargin">
                         <button id="before-btn" class="portNotActive">Before</button>
                         <button id="after-btn" class="portActive">After</button>
                     </div>
-                    <figure class="portfolioCar">
-                        <img src="Images/afterHardscaped.png" width="253.63" height="338.17">
-                    </figure>
+                    <div class="center">
+                        
+                        <figure class="portfolioCar">
+                            <button class="portDir portLeft">&lt;</button>
+                            <img src="Images/afterHardscaped.png" width="253.63" height="338.17">
+                            <button class="portDir portRight">&gt;</button>
+                        </figure>
+                        
+                    </div>
                 </div>
         </section>
     </main>
