Portfolio buttons are in proper position. Changed figure width for all figures.

--- a/index.html
+++ b/index.html
@@ -96,13 +96,13 @@
                         <button id="before-btn" class="portNotActive">Before</button>
                         <button id="after-btn" class="portActive">After</button>
                     </div>
-                    <div class="center">
+                    <div class="center portDiv">
                         <figure class="portfolioCar">
+                            <!-- <button class="portDir portRight">&gt;</button> -->
                             <button class="portDir portLeft">&lt;</button>
-                            <img src="Images/afterHardscaped.png" width="253.63" height="338.17">
+                            <img src="Images/afterHardscaped.png" width="253.63" height="338.17" >
                             <button class="portDir portRight">&gt;</button>
                         </figure>
-                        
                     </div>
                 </div>
         </section>
