--- a/index.html
+++ b/index.html
@@ -110,6 +110,6 @@
                 </div>
         </section>
     </main>
-    <footer>Created by Darius Williams</footer>
+    <footer><p class="center">Website by Darius Williams</p></footer>
 </body>
 </html>
