--- a/index.html
+++ b/index.html
@@ -111,5 +111,6 @@
         </section>
     </main>
     <footer><p class="center">Website by Darius Williams</p></footer>
+    <script src="JS/script.js"></script>
 </body>
 </html>
