--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@
                     <div class="center portDiv">
                         <figure class="portfolioCar">
                             <!-- <button class="portDir portRight">&gt;</button> -->
-                            <button class="portDir portLeft">&lt;</button>
-                            <img src="Images/afterHardscaped.png" width="253.63" height="338.17" >
-                            <button class="portDir portRight">&gt;</button>
+                            <button id="portLeft" class="portDir">&lt;</button>
+                            <img id="portImg" src="Images/afterHardscaped.png" width="253.63" height="338.17" >
+                            <button id="portRight" class="portDir">&gt;</button>
                         </figure>
                     </div>
                 </div>
