--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <p>Transforming Your Outdoor Space with Expertise and Experience</p>
                 <button class="btn-qt">Call for a Quote</button>
             </div>
-            <figure><img src="Images/bestCoverPS.png" alt="garden with mulch" width="254" height="338"></figure>
+            <figure><img src="Images/afterGarden.png" alt="garden with mulch" width="254" height="338"></figure>
         </section>
         <hr>
         <section id="section2">
@@ -103,7 +103,7 @@
                         <figure class="portfolioCar">
                             <!-- <button class="portDir portRight">&gt;</button> -->
                             <button id="portLeft" class="portDir">&lt;</button>
-                            <img id="portImg" src="Images/afterHardscaped.png" width="253.63" height="338.17" >
+                            <img id="portImg" src="Images/afterSod.png" width="253.63" height="338.17" >
                             <button id="portRight" class="portDir">&gt;</button>
                         </figure>
                     </div>
