defining needed functionality of functions

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Ramirez Landscaping Pro</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Nunito&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
@@ -96,8 +96,8 @@
             </div>
                 <div>
                     <div class="center buttonMargin">
-                        <button id="before-btn" class="portNotActive">Before</button>
-                        <button id="after-btn" class="portActive">After</button>
+                        <button id="before-btn" class="portActive">Before</button>
+                        <button id="after-btn" class="portNotActive">After</button>
                     </div>
                     <div class="center portDiv">
                         <figure class="portfolioCar">
