--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <nav>
             <img src="Images/TypeLogoShadow.png" alt="Ramirez Landscaping logo" width="205" height="34" class="logoImg">
             <ul>
-                <li><button class="btn-qt qt1" disabled>Call for a Quote</button></li>
+                <li><button class="btn-qt qt1">Call for a Quote</button></li>
                 <li ><a href="#" class="spanish">Haga clic aquí para español</a></li>
             </ul>
         </nav>
