There's a bug in this code

--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
             </div>
                 <div>
                     <div class="center buttonMargin">
-                        <button id="before-btn" class="portActive">Before</button>
-                        <button id="after-btn" class="portNotActive">After</button>
+                        <button id="before-btn" class="portNotActive">Before</button>
+                        <button id="after-btn" class="portActive">After</button>
                     </div>
                     <div class="center portDiv">
                         <figure class="portfolioCar">
