finised mobile almost

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             </ul>
         </nav>
     </header>
+    <p id="constructionMessage" class="doNotDisplay">This Website is currently under construction; please view it on a device with a smaller screen until we finish construction of this website.</p>
     <main>
         <section id="section1" class="section1">
             <div class="elevate">
@@ -102,7 +103,7 @@
                     <div class="center portDiv">
                         <figure class="portfolioCar">
                             <!-- <button class="portDir portRight">&gt;</button> -->
-                            <button id="portLeft" class="portDir">&lt;</button>
+                            <button id="portLeft" class="portDir doNotDisplay">&lt;</button>
                             <img id="portImg" src="Images/afterSod.png" width="253.63" height="338.17" >
                             <button id="portRight" class="portDir">&gt;</button>
                         </figure>
