--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
             <div class="elevate">
                 <h1>Elevate Your Landscape</h1>
                 <p>Transforming Your Outdoor Space with Expertise and Experience</p>
-                <button class="btn-qt">Call for a Quote</button>
+                <button id="callButton" class="btn-qt">Call for a Quote</button>
+                <button id="messageButton" class="btn-qt doNotDisplay">Message for a Quote</button>
             </div>
             <figure><img src="Images/afterGarden.png" alt="garden with mulch" width="254" height="338"></figure>
         </section>
