--- a/spanish.html
+++ b/spanish.html
@@ -14,30 +14,30 @@
         <nav>
             <img src="Images/TypeLogoShadow.png" alt="Ramirez Landscaping logo" width="205" height="34" class="logoImg">
             <ul>
-                <li><a href="tel:" target="_blank"><button id="firstCallButton" class="btn-qt qt1">Call for a Quote</button></a></li>
+                <li><a href="tel:" target="_blank"><button id="firstCallButton" class="btn-qt qt1">Cotización Gratis</button></a></li>
                 <li><a href="https://www.facebook.com/messages/t/100019698247988/" target="_blank"><button id="messageButton" class="btn-qt qt1 doNotDisplay">Message for a Quote</button></a></li>
-                <li ><a href="spanish.html" class="spanish">Haga clic aquí para español</a></li>
+                <li ><a href="index.html" class="spanish">Click here for English</a></li>
             </ul>
         </nav>
     </header>
-    <p id="constructionMessage" class="doNotDisplay">This Website is currently under construction; please view it on a device with a smaller screen, or in portrait mode, until we finish construction of this website. Thank you.</p>
+    <p id="constructionMessage" class="doNotDisplay">Este sitio web se encuentra en construcción; Véalo en un dispositivo con una pantalla más pequeña o en modo vertical hasta que finalicemos la construcción de este sitio web. Gracias.</p>
     <main>
         <section id="section1" class="section1">
             <div class="elevate">
-                <h1>Elevate Your Landscape</h1>
-                <p>Transforming Your Outdoor Space with Expertise and Experience</p>
-                <button class="btn-qt">Call for a Quote</button>
+                <h1>Eleve su paisaje</h1>
+                <p>Transformando su espacio al aire libre con conocimiento y experiencia</p>
+                <button class="btn-qt">Cotización Gratis</button>
             </div>
             <figure><img src="Images/afterGarden.png" alt="garden with mulch" width="254" height="338"></figure>
         </section>
         <hr>
         <section id="section2">
-                <h2 class="center">Why Choose Us</h2>
+                <h2 class="center">Por qué elegirnos</h2>
                     <div class="center">
                         <figure>
                             <img src="Images/twoTalkingOrange.png" alt="two people talking while sitting on chairs" width="170.4" height="119">
                         </figure>
-                        <p>As a small local business, you can be sure you will get the attention you deserve</p>
+                        <p>Como pequeña empresa local, puede estar seguro de que recibirá la atención que se merece.</p>
                     </div>
                         <div class="center">
                             <figure>
@@ -48,20 +48,20 @@
                                 <!-- 57.1 x 41.5-->
                                 <img src="Images/plantingTreeorange.png" alt="man planting a tree" width="87" height="61">
                             </figure>
-                        <p>Get personalized and tailored services based on your needs</p>
+                        <p>Obtenga servicios personalizados y adaptados a sus necesidades</p>
                         </div>
                     <div class="center">
                         <figure>
                             <img src="Images/talkingPhoneOrange.png" width="137.3" height="118">
                         </figure>
-                        <p>As the owner, I am only a phone call away</p>
+                        <p>Como propietario, estoy a sólo una llamada de distancia.</p>
                     </div>
         </section>
         <hr>
         <section id="section3">
             <div class="center">
-                <h2>Services</h2>
-                    <p>Our services include:</p>
+                <h2>Servicios</h2>
+                    <p>Nuestros servicios incluyen:</p>
             </div>
             <div class="center">
                     <div class="imageRight">
@@ -69,7 +69,7 @@
                             <img src="Images/rakingLeavesOrange.png" width="90" height="107">
                         </figure>
                     </div>
-                    <p>Keeping your landscape clean and maintained, whether commercial or residential</p>
+                    <p>Mantener su jardín limpio y mantenido, ya sea comercial o residencial.</p>
             </div>
             <div class="center">
                 <div class="imageLeft">
@@ -77,25 +77,25 @@
                         <img src="Images/layingSodOrange.png" width="126" height="82">
                     </figure>
                 </div>
-                <p>Laying sod, mowing, and lawn maintenance</p>
+                <p>Colocación de césped, corte y mantenimiento del césped.</p>
             </div>
             <div class="center">
             <figure>
                 <img src="Images/hardscapingOrange.png" width="136" height="85">
             </figure>
-            <p>Roof and gutter cleaning, hardscaping, and more!</p>
+            <p>¡Limpieza de techos y canaletas, jardinería y más!</p>
             </div>
         </section>
         <hr>
         <section id="section4">
             <div class="center">
-                <h2>Portfolio</h2>
-                    <p>Sample of my work:</p>
+                <h2>Portafolio</h2>
+                    <p>Muestra de mi trabajo:</p>
             </div>
                 <div>
                     <div class="center buttonMargin">
-                        <button id="before-btn" class="portNotActive">Before</button>
-                        <button id="after-btn" class="portActive">After</button>
+                        <button id="before-btn" class="portNotActive">Antes</button>
+                        <button id="after-btn" class="portActive">Después</button>
                     </div>
                     <div class="center portDiv">
                         <figure class="portfolioCar">
@@ -109,7 +109,7 @@
         </section>
     </main>
     <footer>
-        <p class="center">Website by Darius Williams</p>
+        <p class="center">Sitio web de Darius Williams</p>
         <p class="center">www.linkedin.com/in/dariuswilliamsdev</p>
     </footer>
     <script src="JS/script.js"></script>
