--- a/spanish.html
+++ b/spanish.html
@@ -15,7 +15,7 @@
             <img src="Images/TypeLogoShadow.png" alt="Ramirez Landscaping logo" width="205" height="34" class="logoImg">
             <ul>
                 <li><a href="tel:" target="_blank"><button id="firstCallButton" class="btn-qt qt1">Cotización Gratis</button></a></li>
-                <li><a href="https://www.facebook.com/messages/t/100019698247988/" target="_blank"><button id="messageButton" class="btn-qt qt1 doNotDisplay">Message for a Quote</button></a></li>
+                <li><a href="https://www.facebook.com/profile.php?id=100019698247988" target="_blank"><button id="messageButton" class="btn-qt qt1 doNotDisplay">Mensaje para cotización</button></a></li>
                 <li ><a href="index.html" class="spanish">Click here for English</a></li>
             </ul>
         </nav>
