good for mobile

--- a/spanish.html
+++ b/spanish.html
@@ -26,7 +26,7 @@
             <div class="elevate">
                 <h1>Eleve su paisaje</h1>
                 <p>Transformando su espacio al aire libre con conocimiento y experiencia</p>
-                <button class="btn-qt">Cotización Gratis</button>
+                <a href="tel:" target="_blank"><button class="btn-qt">Cotización Gratis</button></a>
             </div>
             <figure><img src="Images/afterGarden.png" alt="garden with mulch" width="254" height="338"></figure>
         </section>
