before and after buttons bigger

--- a/index.html
+++ b/index.html
@@ -94,6 +94,9 @@
             </div>
                 <div>
                     <div class="center buttonMargin">
+                        <!-- <h3>View</h3> -->
+                        <button disabled class="viewButton">Click to view:</button>
+                        <br>
                         <button id="before-btn" class="portNotActive">Before</button>
                         <button id="after-btn" class="portActive">After</button>
                     </div>
